force-app/main/default/objects/Fitness_Record__c/Fitness_Record__c.object-meta.xml
<CustomObject>
    <label>Fitness Record</label>
    <nameField>
        <displayFormat>Rec No - {0000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fitness Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>