force-app/main/default/objects/Fitness_Record__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fitness Records</relationshipLabel>
    <relationshipName>Fitness_Records</relationshipName>
    <type>Lookup</type>
</CustomField>