force-app/main/default/objects/Fitness_Record__c/fields/Record_Date__c.field-meta.xml
<CustomField>
    <fullName>Record_Date__c</fullName>
    <label>Record Date</label>
    <type>Date</type>
</CustomField>