force-app/main/default/objects/Fitness_Record__c/fields/Trainer__c.field-meta.xml
<CustomField>
    <fullName>Trainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trainer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fitness Records (Trainer)</relationshipLabel>
    <relationshipName>Fitness_Records1</relationshipName>
    <type>Lookup</type>
</CustomField>